expected/main/gens/gen-no-ref1.err
ERROR: "actual/main/gens/gen-no-ref1.lc", line 3
external putchar :: Word -> Proc Unit
         ^
External putchar is implemented by a primitive of the same name so cannot be declared as an entrypoint.

ERROR: "actual/main/gens/gen-no-ref1.lc", line 6
external getchar :: Proc Word
         ^
External getchar is implemented by a primitive of the same name so cannot be declared as an entrypoint.

ERROR: Aborting after 2 previously reported errors

